--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.5"
   - "3.6"
 cache: pip
-install: 
-  - "pip install -r requirements.txt"
+#install: 
+#  - "pip install -r requirements.txt"
 script: 
   - python TestHundred.py
